Fixed bugs Updated tests
git-svn-id: http://svn.intraface.dk/intrafacepublic/3Party/Ilib_Variable@1680 2fc64ab5-e821-0410-98e1-ee8f871d7b73

--- a/build.xml
+++ b/build.xml
@@ -4,8 +4,8 @@
     <taskdef classname="phing.tasks.ext.IlibPearDeployerTask" name="peardeploy" />
 
     <property name="package-name" value="${phing.project.name}" />
-    <property name="version" value="0.2.2" />
-    <property name="stability" value="alpha" />
+    <property name="version" value="1.0.0" />
+    <property name="stability" value="stable" />
     <property name="pear.channel" value="public.intraface.dk" />
 
     <property name="source.dir" value="." />
@@ -49,11 +49,13 @@
             <license>LGPL</license>
             <version release="${version}" api="${version}" />
             <stability release="${stability}" api="${stability}" />
+            <release>
+            </release>
             <dependencies>
                 <php minimum_version="5.2.0" />
                 <pear minimum_version="1.6.0" recommended_version="1.6.1" />
             </dependencies>
-            <notes>* Added precision</notes>
+            <notes>* Added en_US locale. Renamed method getAsLocal to getAsLocale</notes>
         </d51pearpkg2>
     </target>
 
