--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ php:
   - 5.3
 before_script:
   - pear channel-discover pear.phpunit.de
+  - pear channel-discover public.intraface.dk
   - pear install PHP_CodeSniffer
+  - pear install Ilib_ClassLoader
   - phpenv rehash
 script: 
   - phpunit ./tests
