--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
+sudo: false
 language: php
 php:
-  - 5.3
-before_script:
-  - pear channel-discover pear.phpunit.de
-  - pear channel-discover public.intraface.dk
-  - pear install PHP_CodeSniffer
-  - pear install intrafacepublic/Ilib_ClassLoader-0.1.2
-  - phpenv rehash
-script: 
+  - 5.5
+install:
+  - composer self-update
+  - composer install --no-interaction
+script:
   - phpunit ./tests
-  - phpcs src
-
+  - ./vendor/bin/phpcs --standard=phpcs.xml src
